# pycellga

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  citing.html  contributing.html  ga.py  gen.py  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pycellga.example.html  pycellga.html  pycellga.mutation.html  pycellga.neighborhoods.html  pycellga.problems.html  pycellga.problems.single_objective.continuous.html  pycellga.problems.single_objective.discrete.binary.html  pycellga.problems.single_objective.discrete.html  pycellga.problems.single_objective.discrete.permutation.html  pycellga.problems.single_objective.html  pycellga.recombination.html  pycellga.selection.html  pycellga.src.example.html  pycellga.src.mutation.html  pycellga.src.neighborhoods.html  pycellga.src.problems.single_objective.continuous.html  pycellga.src.recombination.html  pycellga.src.selection.html  pycellga.src.tests.html  pycellga.tests.html  requirements.txt  search.html  searchindex.js  setup.cfg  (+16 more)
.doctrees/: index.doctree  pycellga.src.example.doctree  pycellga.src.problems.single_objective.discrete.permutation.doctree  pycellga.src.selection.doctree  pycellga.src.tests.doctree
.github/workflows/: documentation.yml  main.yml  paper-workflow.yml  test.yml
CGA/: Grid.py  Individual.py  Population.py  ca.js  grid.py  individual.py  main2_cga.py  main3_cga.py  main_cga.py  my_cga.py  population.py
CGA/Classes/: Grid.py
CGA/Mutation/: BinaryMutation.py  BitFlipMutation.py  SwapMutation.py
CGA/Neighborhoods/: Compact9.py  Linear5.py
CGA/Problems/: abstractproblem.py
CGA/Recombination/: OnePointCrossover.py  TwoPointsCrossover.py  one_point_crossover.py
CGA/Selection/: RouletteWheelSelection.py  TournamentSelection.py
CGA/mutation/: bit_flip_mutation.py  swap_mutation.py
CGA/recombination/: uniformcrossover.py
CGA/replacement/: replace_if_non_worse.py
CGA/selection/: tournament_selection.py
CGA/tests/: testgrid.py  testonemax.py  testuniformcrossover.py
DEAP/: coevolution_base.py  coevolution_gen.py  coevolution_niching.py  one_max.py  one_max_short.py
DEAP/Cooperative_coevolution/: coevolution_adapt.py  coevolution_final.py
GA/: app.py  ga.py  knapsack_ga.py
LEAP/: low_level.py  simple.py
OTHERS/: gpt.py
OTHERS/DEAP/: knapsack.py  nsga_3.py  one_max_numpy.py
OTHERS/GA/: knapsack_ga.py
OTHERS/LEAP/: simple_ga.py
_modules/: index.html
_modules/pycellga/: byte_operators.html  grid.html  individual.html  optimizer.html  population.html
_modules/src/: grid.html
_sources/: index.rst.txt  pycellga.example.rst.txt  pycellga.mutation.rst.txt  pycellga.problems.rst.txt  pycellga.problems.single_objective.continuous.rst.txt  pycellga.problems.single_objective.discrete.binary.rst.txt  pycellga.problems.single_objective.discrete.permutation.rst.txt  pycellga.problems.single_objective.discrete.rst.txt  pycellga.problems.single_objective.rst.txt  pycellga.recombination.rst.txt  pycellga.rst.txt  pycellga.selection.rst.txt  pycellga.src.example.rst.txt  pycellga.src.mutation.rst.txt  pycellga.src.neighborhoods.rst.txt  pycellga.src.problems.rst.txt  pycellga.src.problems.single_objective.discrete.permutation.rst.txt  pycellga.src.problems.single_objective.discrete.rst.txt  pycellga.src.recombination.rst.txt  pycellga.src.rst.txt  pycellga.src.selection.rst.txt  pycellga.src.tests.rst.txt  pycellga.tests.rst.txt  src.example.rst.txt  src.problems.single_objective.continuous.rst.txt  src.rst.txt  usage_examples.rst.txt
cga/: __init__.py  byte_operators.py  compact_ga.py  db_utility.py  grid.py  individual.py  main_cga.py  main_cga_1.py  main_cga_2.py  optimizer.py  optimizer_alpha_cga.py  optimizer_ccga.py  optimizer_cga.py  optimizer_mcccga.py  optimizer_sync_cga.py  population.py
cga/mutation/: bit_flip_mutation.py  byte_mutation.py  byte_mutation_random.py  float_uniform_mutation.py  (+4 more)
doc/: requirements.txt
docs/: citing.rst  conf.py  contributing.rst  index.md  index.rst  installation.rst  modules.rst  pycellga.example.rst  pycellga.mutation.rst  pycellga.neighborhoods.rst  pycellga.problems.single_objective.continuous.rst  pycellga.problems.single_objective.discrete.binary.rst  pycellga.problems.single_objective.discrete.permutation.rst  pycellga.problems.single_objective.discrete.rst  pycellga.problems.single_objective.rst  pycellga.recombination.rst  pycellga.rst  pycellga.selection.rst  src.mutation.rst  src.problems.rst  src.problems.single_objective.discrete.binary.rst  src.problems.single_objective.rst  usage_examples.rst
paper/: Makefile  paper.bib  paper.md
pycellga/: __init__.py  common.py  grid.py  individual.py  optimizer.py  population.py
src/: db_utility.py  individual.py  main.py  main_cga.py  optimizer.py  optimizer_alpha_cga.py  optimizer_ccga.py  optimizer_cga.py  optimizer_mcccga.py  optimizer_sync_cga.py  population.py
(+741 files in other folders)
