[metadata]
name = pycellga
version = 0.4.0
description = A Python Package for Improved Cellular Genetic Algorithms
author = Sevgi Akten Karakaya, Mehmet Hakan Satman
author_email = sevgiakten@gmail.com, mhsatman@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SevgiAkten/pycellga
project_urls =
    Documentation = https://sevgiakten.github.io/pycellga/
    Source = https://github.com/SevgiAkten/pycellga
    Issue Tracker = https://github.com/SevgiAkten/pycellga/issues
    PyPI = https://pypi.org/project/pycellga/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    geographiclib>=2.0,<3.0
    geopy>=2.4.0,<3.0
    iniconfig>=2.0.0,<3.0
    mpmath>=1.3.0,<2.0
    numpy>=1.26.0,<2.0
    plumbum>=1.8.3,<2.0
    ply>=3.11,<4.0
    pyparsing>=3.1.1,<4.0
    python-dateutil>=2.8.0,<3.0
    pytz>=2023.3,<2024.0
    tzdata>=2023.3,<2024.0
    pymoo>=0.5.0,<1.0
    tsplib95>=0.7.0,<1.0

[options.extras_require]
dev =
    pytest>=8.0,<9.0
    pytest-xdist>=3.0,<4.0
    grip==4.6.2
    Markdown==3.6
    Markdown-Editor==1.0.7
    path-and-address==2.0.1
    pluggy==1.5.0
    six==1.16.0

docs =
    sphinx>=7.4.0,<8.0
    sphinx-rtd-theme>=2.0.0,<3.0
    sphinxcontrib-applehelp>=2.0.0,<3.0
    sphinxcontrib-htmlhelp>=2.1.0,<3.0
    sphinxcontrib-jquery>=4.1,<5.0
    sphinxcontrib-jsmath>=1.0.0,<2.0
    sphinxcontrib-qthelp>=2.0.0,<3.0
    sphinxcontrib-serializinghtml>=2.0.0,<3.0

[options.packages.find]
where = .

[options.package_data]
* = *.txt, *.md
